[package]
name = "lib-wc"
version = "0.1.10"
edition = "2021"
readme = "README.md"
description = "Will's Programming Toolbox"
categories = ["async", "concurrent-programming", "asynchronous-programming"]
keywords = ["async", "concurrent", "non-blocking", "futures", "data-structures"]
exclude = ["/benches", "/.github", "/fuzz"]
repository = "https://github.com/wcygan/lib-wc"
homepage = "https://github.com/wcygan/lib-wc"
license = "MPL-2.0"

[features]
# use at your own risk :)
dangerous = []

[dependencies]
serde = "1.0.150"
serde_derive = "1.0.150"
atomic-wait = "1.0.1"
crossbeam = "0.8.2"
rayon = "1.6.1"
log = "0.4.17"
crossbeam-epoch = "0.9.13"
bincode = "1.3.3"
anyhow = "1.0.69"
tokio = { version = "1.25.0", features = ["full"] }
dashmap = "5.4.0"
futures = "0.3.26"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"
quickcheck = "1"
quickcheck_macros = "1"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
regex = "1.7.1"

[[bench]]
name = "lib-wc_bench"
path = "benches/lib.rs"
harness = false

[package.metadata.docs.rs]
# Make sure that docs.rs has the documentation for all features
all-features = true
