[workspace]
members = ["load-generator-common", "load-generator-application"]

[workspace.dependencies]
tokio = { version = "1.24.2", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
anyhow = "1.0.69"
hyper = "0.14.24"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
indicatif = "0.17.3"